k3s/test-dev/adminer-deploy-run.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: adminer-deploy-run
  name: adminer-deploy-run
  namespace: test-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer-deploy-run
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: adminer-deploy-run
    spec:
      nodeName: toaster
      containers:
      - image: adminer:latest
        name: adminer
        resources: {}
status: {}
