k3s/test-dev/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: pgadmin-deployment 
  namespace: test-dev 
  labels:
    tier: admin
    app: admin
    env: admin
spec:
  replicas: 3
  selector:
    matchLabels:
      env: admin
  template:
    metadata:
      name: pgadmin-pod 
      labels:
        env: admin
    spec:
      containers:
        - name: pgadmin 
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
