k3s/test-dev/red-hat.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: redhat
  namespace: test-dev 
  labels:
    app: redhat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redhat
  template:
    metadata:
      labels:
        app: redhat
    spec:
      containers:
        - name: redhat
          image: quay.io/centos/centos:stream8
