k3s/test-dev/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: wordpress-deploy 
  namespace: test-dev 
  labels:
    tier: test
    env: app 
spec:
  selector:
    matchLabels:
      tier: test
  replicas: 2
  template:
    metadata:
      name: wordpress-pod 
      labels:
        tier: test
    spec:
      containers:
        - name: wordpress 
          image: wordpress
          ports:
            - containerPort: 80
