k3s/test-dev/adminer-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: adminer-svc
  namespace: test-dev 
spec:
  type: NodePort
  selector:
    env: admin 
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30999
