k3s/test-dev/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-k3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer-k3
  template:
    metadata:
      labels:
        app: adminer-k3
    spec:
      containers:
      - name: adminer-k3
        image: adminer
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-k3
spec:
  selector:
    app: adminer-k3
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
  type: NodePort
