k3s/test-dev/homepage-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: homepage-svc
  namespace: test-dev 
spec:
  type: ClusterIP
  selector:
    tier: godly
  ports:
    - targetPort: 3000 
      port: 80
