k3s/test-dev/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-k3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-k3
  template:
    metadata:
      labels:
        app: mariadb-k3
    spec:
      containers:
      - name: mariadb-k3
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mariadb-storage
            mountPath: /var/lib/mysql
      volumes: 
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-k3
spec:
  selector:
    app: mariadb-k3
  ports:
    - port: 3306
      targetPort: 3306
