k3s/test-dev/my-portainer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-portainer
  namespace: test-dev
  labels:
    app.kubernetes.io/instance: my-portainer
    app.kubernetes.io/name: portainer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: https
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: edge
      port: 30776
      protocol: TCP
      targetPort: 30776
  selector:
    app.kubernetes.io/instance: my-portainer
    app.kubernetes.io/name: portainer
  sessionAffinity: None
