k3s/test-dev/nginx-deployment.yaml
apiVersion: v1
kind: Service 
metadata:
  name: myapp-service 
  namespace: test-dev 
spec:
  selector:
    app: pod 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
