k3s/test-dev/pgadmin-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: pgadmin-svc
  namespace: test-dev 
spec:
  type: ClusterIP
  selector:
    env: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
