k3s/test-dev/portainer-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: portainer-svc
spec:
  type: ClusterIP
  selector:
    app: portainer 
  ports:
    - port: 8080
      targetPort: 9000
