k3s/test-dev/portainer.yaml
---
# Source: portainer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: test-dev
  labels:
    io.portainer.kubernetes.application.stack: portainer
    helm.sh/chart: portainer-1.0.66
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.27.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: https
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: edge
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
---
# Source: portainer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: test-dev
  labels:
    io.portainer.kubernetes.application.stack: portainer
    helm.sh/chart: portainer-1.0.66
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.27.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: portainer
      app.kubernetes.io/instance: portainer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portainer
        app.kubernetes.io/instance: portainer
    spec:
      nodeSelector:
        {}
      tolerations:
        []
      serviceAccountName: portainer-sa-clusteradmin
      volumes:
        - name: "data"
          persistentVolumeClaim:
            claimName: portainer
      containers:
        - name: portainer
          image: "portainer/portainer-ce:2.27.6"
          imagePullPolicy: Always
          args:
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: tcp-edge
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 45
            periodSeconds: 30
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 45
            periodSeconds: 30
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          resources:
            {}
---
# Source: portainer/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "portainer-test-connection"
  namespace: test-dev  
  labels:
    helm.sh/chart: portainer-1.0.66
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.27.6"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['portainer:9000']
  restartPolicy: Never
