k3s/test-dev/postgres-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: postgres-svc
  namespace: test-dev 
spec:
  selector:
    env: postgres-rs 
  ports:
    - port: 5432
      targetPort: 5432
