k3s/test-dev/wordpress-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: wordpress-svc
  namespace: test-dev 
spec:
  type: ClusterIP
  selector:
    tier: test 
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
