k3s/test-dev/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: test-dev
spec:
  ingressClassName: traefik  
  rules:
  - host: adminer.10.6.6.22.nip.io

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer-svc
            port:
              number: 8080
